<resources>
    <string name="app_name">Kotlin Hero</string>
    <string name="tvOne">1.</string>
    <string name="tvLipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
        dolore magna aliqua.
    </string>
    <string name="tvSearch">Cari…</string>
    <string name="tvSearchVideo">Cari video tutorial…</string>
    <string name="tvIntroduceKotlin">Tentang Kotlin</string>
    <string name="tvTutorial">Tutorial</string>
    <string name="tvStartYourJourney">Mulai Belajar Kotlin</string>
    <string name="tvNull">Null</string>
    <string name="tvFollowing">Mengikuti</string>
    <string name="tvFollowingNumber">0</string>
    <string name="tvFollowers">Pengikut</string>
    <string name="tvFollowerNumber">0</string>
    <string name="tvRepository">Repositori</string>
    <string name="tvRepositoryNumber">0</string>
    <string name="tvLanguage">Bahasa</string>
    <string name="tvOtherMenus">Menu Lainnya</string>
    <string name="tvProfile">Profil</string>
    <string name="tvShare">Bagikan</string>
    <string name="tvOpenInBrowser">Buka di Peramban</string>
    <string name="tvAppInfo">Info Aplikasi</string>
    <string name="tvInfo">Info</string>
    <string name="tvDescription">Deskripsi</string>
    <string name="tvAppVersion">1.0</string>

    <!--Main Menu-->
    <string name="tvKotlinBasic">Tutorial Kotlin Dasar</string>
    <string name="tvKotlinOOP">Tutorial Kotlin OOP</string>
    <string name="tvKotlinGeneric">Tutorial Kotlin Generic</string>
    <string name="tvKotlinCollection">Tutorial Kotlin Collection</string>
    <string name="tvKotlinCoroutine">Tutorial Kotlin Coroutine</string>
    <string name="tvKotlinUnitTesting">Tutorial Kotlin Unit Testing</string>

    <!--Bottom Menu-->
    <string name="icHome">Beranda</string>
    <string name="icFavorite">Favorit</string>
    <string name="icAbout">Tentang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>