<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="10dp"
    app:cardUseCompatPadding="false"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintIntroduce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/tvIntroduceKotlinTitleNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvOne"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvIntroduceKotlinTitleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/app_name"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@+id/tvIntroduceKotlinTitleNumber"
            app:layout_constraintBottom_toBottomOf="@+id/tvIntroduceKotlinTitleNumber"
            app:layout_constraintStart_toEndOf="@+id/tvIntroduceKotlinTitleNumber"/>

        <ToggleButton
            android:id="@+id/toggleExpand"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:textOn=""
            android:textOff=""
            android:focusableInTouchMode="false"
            android:background="@drawable/expanded_toggle"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expandableIntroduceKotlinLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/tvIntroduceKotlinTitleName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tvDescTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvDescription"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvLipsum"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/tvDescTitle"
                app:layout_constraintStart_toStartOf="@+id/tvDescTitle"/>

            <ImageView
                android:id="@+id/imgVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_video"
                app:layout_constraintTop_toBottomOf="@id/tvDesc"
                app:layout_constraintStart_toStartOf="@id/tvDesc"/>

            <TextView
                android:id="@+id/tvVideoUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintTop_toTopOf="@+id/imgVideo"
                app:layout_constraintBottom_toBottomOf="@+id/imgVideo"
                app:layout_constraintStart_toEndOf="@+id/imgVideo"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>