<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".activity.profile.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/purple_700">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/first_layer">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imgProfile"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@color/purple_700"
                            app:civ_border_width="2.5dp"
                            app:civ_border_color="@color/purple_500"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <TextView
                            android:id="@+id/tvProfileName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:text="@string/tvNull"
                            app:layout_constraintStart_toStartOf="@id/imgProfile"
                            app:layout_constraintEnd_toEndOf="@id/imgProfile"
                            app:layout_constraintTop_toBottomOf="@id/imgProfile"/>

                        <TextView
                            android:id="@+id/tvProfileUsername"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:text="@string/tvNull"
                            app:layout_constraintStart_toStartOf="@id/tvProfileName"
                            app:layout_constraintEnd_toEndOf="@id/tvProfileName"
                            app:layout_constraintTop_toBottomOf="@id/tvProfileName"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@drawable/second_layer">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvFollowingProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:text="@string/tvFollowingNumber"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/white"
                        android:text="@string/tvFollowing"/>

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/white"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvFollowersProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:text="@string/tvFollowerNumber"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/white"
                        android:text="@string/tvFollowers"/>

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/white"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvRepositoryProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:text="@string/tvRepositoryNumber"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/white"
                        android:text="@string/tvRepository"/>

                </LinearLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/imgLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_location"
                    android:contentDescription="@null"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/imgCompany"/>

                <TextView
                    android:id="@+id/tvLocationProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/black"
                    android:text="@string/tvNull"
                    app:layout_constraintStart_toEndOf="@id/imgLocation"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/tvCompanyProfile"/>

                <ImageView
                    android:id="@+id/imgCompany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_office"
                    android:contentDescription="@null"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgLocation"
                    app:layout_constraintBottom_toTopOf="@id/imgLink"/>

                <TextView
                    android:id="@+id/tvCompanyProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/black"
                    android:text="@string/tvNull"
                    app:layout_constraintStart_toEndOf="@id/imgCompany"
                    app:layout_constraintTop_toBottomOf="@id/tvLocationProfile"
                    app:layout_constraintBottom_toTopOf="@id/tvLinkProfile"/>

                <ImageView
                    android:id="@+id/imgLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_link"
                    android:contentDescription="@null"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgCompany"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tvLinkProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/black"
                    android:text="@string/tvNull"
                    app:layout_constraintStart_toEndOf="@id/imgLink"
                    app:layout_constraintTop_toBottomOf="@id/tvCompanyProfile"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayoutProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="fill"
                app:tabInlineLabel="true"
                app:tabIndicatorColor="@color/purple_500"
                app:tabIndicatorHeight="2dp"
                app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
                app:tabSelectedTextColor="@color/purple_500"
                app:tabIconTint="@color/purple_700">

            </com.google.android.material.tabs.TabLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPagerProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>